# CMake template 
# --------------
# cmake_minimum_required(VERSION 3.20.0) # define minimum version of CMake
# project("<projectname>" VERSION 1.0) # name project
# include_directories(inc/) # dirs where headers are stored
# file(GLOB_RECURSE SRC_FILES ${PROJECT_SOURCE_DIR}/src/*.c) # get all .c/source files in the src/ folder which is in the project folder
# add_executable(program ${SRC_FILES}) # add exec with source files
# target_link_libraries(program raylib GL m pthread dl rt X11) # link libraries to exec




